--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
   },
   "dependencies": {
     "react": "16.2",
-    "react-dom": "16.2"
+    "react-dom": "16.2",
+    "react-redux": "^7.0.1",
+    "redux": "^4.0.1"
   },
   "scripts": {
     "start": "webpack-dev-server --mode development",
