--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "webpack-dev-server": "^3.1.10"
   },
   "dependencies": {
-    "react": "16.2",
-    "react-dom": "16.2",
+    "react": "16.4.0",
+    "react-dom": "16..4.0",
     "react-redux": "^7.0.1",
     "redux": "^4.0.1"
   },
