--- a/package.json
+++ b/package.json
@@ -27,10 +27,10 @@
     "webpack-dev-server": "^3.1.10"
   },
   "dependencies": {
-    "react": "16.4.0",
-    "react-dom": "16..4.0",
-    "react-redux": "^7.0.1",
-    "redux": "^4.0.1"
+    "react": "16.2",
+    "react-dom": "16.2",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2"
   },
   "scripts": {
     "start": "webpack-dev-server --mode development",
